<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.example.ejem01_holamundo.Usuario" />

    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_saludoInicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:gravity="center_horizontal"
            android:text="@string/saludo"
            android:textSize="34sp" />

        <Button
            android:id="@+id/b_saludar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            android:text="@string/saludar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_nombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="0.25"
                android:text="@string/nombre" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_nombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="0.75">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{user.nombre}"
                    android:hint="Inserte nombre" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_edad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="0.25"
                android:text="@string/edad" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_edad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="0.25">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_edad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Inserte Edad"

                    android:inputType="number"
                    android:text="@{String.valueOf(user.edad)}" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cb_soltero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:checked="@{user.soltero}"
                android:text="Soltero" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ciudad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="0.25"
                android:text="@string/ciudad" />

            <Spinner
                android:id="@+id/sp_ciudades"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:entries="@array/ciudades"

                tools:ignore="TouchTargetSizeCheck" />


        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg_colorFavorito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_rojo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Rojo" />

            <RadioButton
                android:id="@+id/rb_verde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Verde" />

            <RadioButton
                android:id="@+id/rb_azul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Blue" />


        </RadioGroup>

        <Spinner
            android:id="@+id/sp_listado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <ListView
            android:id="@+id/lv_listado"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</layout>